# swagger/swagger.yml
@@ -9,256 +9,133 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-basePath: /v1
+basePath: /api
 paths:
-  /object/:
-    get:
+  /v2/etcdv2/delete:
+    delete:
       tags:
-      - object
-      description: get all objects
-      operationId: ObjectController.GetAll
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    post:
-      tags:
-      - object
-      description: create object
-      operationId: ObjectController.Create
+      - v2
+      description: etcdv2 修改设置
+      operationId: EtcdV2Controller.Delete
       parameters:
       - in: body
-        name: body
-        description: The object content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Object'
-      responses:
-        "200":
-          description: '{string} models.Object.Id'
-        "403":
-          description: body is empty
-  /object/{objectId}:
-    get:
-      tags:
-      - object
-      description: find object by objectid
-      operationId: ObjectController.Get
-      parameters:
-      - in: path
-        name: objectId
+        name: key
         description: the objectid you want to get
         required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    put:
-      tags:
-      - object
-      description: update the object
-      operationId: ObjectController.Update
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectid you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: The body
-        required: true
         schema:
-          $ref: '#/definitions/models.Object'
+          $ref: '#/definitions/models.Key'
       responses:
         "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Object'
+          description: '{string} success'
         "403":
-          description: :objectId is empty
-    delete:
-      tags:
-      - object
-      description: delete the object
-      operationId: ObjectController.Delete
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectId you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: objectId is empty
-  /user/:
-    get:
-      tags:
-      - user
-      description: get all Users
-      operationId: UserController.GetAll
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
+          description: :key is empty
+  /v2/etcdv2/get:
     post:
       tags:
-      - user
-      description: create users
-      operationId: UserController.CreateUser
+      - v2
+      description: etcdv2 查询
+      operationId: EtcdV2Controller.Get
       parameters:
       - in: body
-        name: body
-        description: body for user content
+        name: key
+        description: the objectid you want to get
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/models.Key'
       responses:
         "200":
-          description: '{int} models.User.Id'
+          description: '{string} success'
         "403":
-          description: body is empty
-  /user/{uid}:
-    get:
-      tags:
-      - user
-      description: get user by uid
-      operationId: UserController.Get
-      parameters:
-      - in: path
-        name: uid
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
-        "403":
-          description: :uid is empty
+          description: :key is empty
+  /v2/etcdv2/set:
     put:
       tags:
-      - user
-      description: update the user
-      operationId: UserController.Update
+      - v2
+      description: etcdv2 修改设置
+      operationId: EtcdV2Controller.Set
       parameters:
-      - in: path
-        name: uid
-        description: The uid you want to update
-        required: true
-        type: string
       - in: body
-        name: body
-        description: body for user content
+        name: key
+        description: the objectid you want to get
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/models.Value'
       responses:
         "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
+          description: '{string} success'
         "403":
-          description: :uid is not int
+          description: :key is empty
+  /v3/etcdv3/delete:
     delete:
       tags:
-      - user
-      description: delete the user
-      operationId: UserController.Delete
+      - v3
+      description: etcdV3 修改设置
+      operationId: EtcdV3Controller.Delete
       parameters:
-      - in: path
-        name: uid
-        description: The uid you want to delete
+      - in: body
+        name: key
+        description: the objectid you want to get
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/models.Key'
       responses:
         "200":
-          description: '{string} delete success!'
+          description: '{string} success'
         "403":
-          description: uid is empty
-  /user/login:
-    get:
+          description: :key is empty
+  /v3/etcdv3/get:
+    post:
       tags:
-      - user
-      description: Logs user into the system
-      operationId: UserController.Login
+      - v3
+      description: etcdV3 查询
+      operationId: EtcdV3Controller.Get
       parameters:
-      - in: query
-        name: username
-        description: The username for login
+      - in: body
+        name: key
+        description: the objectid you want to get
         required: true
-        type: string
-      - in: query
-        name: password
-        description: The password for login
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/models.Key'
       responses:
         "200":
-          description: '{string} login success'
+          description: '{string} success'
         "403":
-          description: user not exist
-  /user/logout:
-    get:
+          description: :key is empty
+  /v3/etcdv3/set:
+    put:
       tags:
-      - user
-      description: Logs out current logged in user session
-      operationId: UserController.logout
+      - v3
+      description: etcdV3 修改设置
+      operationId: EtcdV3Controller.Set
+      parameters:
+      - in: body
+        name: key
+        description: the objectid you want to get
+        required: true
+        schema:
+          $ref: '#/definitions/models.Value'
       responses:
         "200":
-          description: '{string} logout success'
+          description: '{string} success'
+        "403":
+          description: :key is empty
 definitions:
-  models.Object:
-    title: Object
+  models.Key:
+    title: Key
     type: object
     properties:
-      ObjectId:
+      key:
         type: string
-      PlayerName:
+      recursive:
+        type: boolean
+  models.Value:
+    title: Value
+    type: object
+    properties:
+      key:
         type: string
-      Score:
+      ttl:
         type: integer
         format: int64
-  models.Profile:
-    title: Profile
-    type: object
-    properties:
-      Address:
+      value:
         type: string
-      Age:
-        type: integer
-        format: int64
-      Email:
-        type: string
-      Gender:
-        type: string
-  models.User:
-    title: User
-    type: object
-    properties:
-      Id:
-        type: string
-      Password:
-        type: string
-      Profile:
-        $ref: '#/definitions/models.Profile'
-      Username:
-        type: string
-tags:
-- name: object
-  description: |
-    Operations about object
-- name: user
-  description: |
-    Operations about Users
